<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="com.viamedsalud.gvp.ui.dashboard.HomeFragment" />
    </data>

    <ScrollView
        android:id="@+id/scrollview_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_background_radius"
        android:elevation="0dp"
        android:paddingBottom="@dimen/_10sdp">

        <RelativeLayout
            android:id="@+id/layout_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_dark_arrow" />

            <LinearLayout
                android:id="@+id/layout_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/section_spacing"
                android:paddingVertical="@dimen/section_spacing">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_12sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/inner_spacing"
                    android:text="@string/saludo_bienvenida"
                    android:textSize="@dimen/text_size_h4" />

                <TextView
                    android:id="@+id/nombre_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/inner_spacing"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_h4" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/layout_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_header"
                android:layout_marginHorizontal="@dimen/section_spacing">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    tools:ignore="RelativeOverlap">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visitas_hoy"
                        android:textColor="@color/colorVariant"
                        android:textSize="@dimen/text_size_h3"
                        android:textStyle="bold" />

                </LinearLayout>


                <com.vaibhavlakhera.circularprogressview.CircularProgressView
                    android:id="@+id/progressView"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_alignParentEnd="true"
                    android:onClick="@{()->handler.onReportClicked()}"
                    app:animate="true"
                    app:animateDuration="1000"
                    app:fillColor="@color/whiteGrey"
                    app:progressColor="@color/colorPrimary"
                    app:progressInterpolator="@android:anim/accelerate_decelerate_interpolator"
                    app:progressRoundCap="true"
                    app:progressTextColor="@color/colorPrimary"
                    app:progressTextEnabled="true"
                    app:progressTextSize="@dimen/text_size_h3"
                    app:progressTextType="progress"
                    app:progressValue="0"
                    app:progressWidth="@dimen/_10sdp"
                    app:startAngle="270"
                    app:totalColor="@color/whiteGrey"
                    app:totalValue="50"
                    app:totalWidth="@dimen/_20sdp" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_banner"
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_progress"
                android:layout_marginStart="@dimen/section_spacing"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="@dimen/section_spacing"
                android:layout_marginBottom="@dimen/section_spacing"
                app:cardCornerRadius="@dimen/_5sdp" />

            <LinearLayout
                android:id="@+id/layout_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_banner"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/section_spacing"
                        android:layout_weight=".5"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:onClick="@{()->handler.pacienteClicked()}"
                            android:orientation="vertical"
                            android:padding="@dimen/inner_spacing"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:contentDescription="@string/todo"
                                android:paddingTop="@dimen/inner_spacing"
                                android:src="@drawable/ic_schedule"
                                app:tint="@color/colorPrimary" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingTop="@dimen/inner_spacing"
                                android:text="@string/escanear_pulsera"
                                android:textColor="@color/grey"
                                android:textSize="@dimen/text_size_h4"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/section_spacing"
                        android:layout_weight=".5"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:onClick="@{()->handler.onHistoryClicked()}"
                            android:orientation="vertical"
                            android:padding="@dimen/inner_spacing"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:contentDescription="@string/todo"
                                android:paddingTop="@dimen/inner_spacing"
                                android:src="@drawable/ic_mobilehistory"
                                app:tint="@color/colorPrimary" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingTop="@dimen/inner_spacing"
                                android:text="Mis Trabajos"
                                android:textColor="@color/grey"
                                android:textSize="@dimen/text_size_h4"
                                android:textStyle="bold"  />

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/section_spacing"
                        android:layout_weight=".5"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{()->handler.onListPacientesClicked()}"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="@dimen/inner_spacing"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:contentDescription="@string/todo"
                                android:paddingTop="@dimen/inner_spacing"
                                android:src="@drawable/ic_pateint"
                                app:tint="@color/colorPrimary" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingTop="@dimen/inner_spacing"
                                android:text="@string/lista_pacientes"
                                android:textColor="@color/grey"
                                android:textSize="@dimen/text_size_h4"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/section_spacing"
                        android:layout_weight=".5"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:onClick="@{()->handler.onTareasClicked()}"
                            android:orientation="vertical"
                            android:padding="@dimen/inner_spacing"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="68dp"
                                android:contentDescription="@string/todo"
                                android:paddingTop="@dimen/inner_spacing"
                                android:src="@drawable/list"
                                app:tint="@color/colorPrimary" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingTop="@dimen/inner_spacing"
                                android:text="Tareas"
                                android:textColor="@color/grey"
                                android:textSize="@dimen/text_size_h4"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>
</layout>